# Matrix-Multiply-Optimization

./: CMakeLists.txt  README.md  benchmark.csv
src/: CMakeLists.txt  gemm.cpp  gemm.h  gemm_benchmark.cpp  main.cpp  matrix.cpp  matrix.h  modules.cpp  modules.h
test/: CMakeLists.txt  test_gemm.cpp
